Minimize clone depth
Signed-off-by: 林博仁(Buo-ren, Lin) <Buo.Ren.Lin@gmail.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -16,6 +16,7 @@ parts:
   wxwidgets-3-0:
     source: https://github.com/wxWidgets/wxWidgets.git
     source-branch: WX_3_0_BRANCH
+    source-depth: 1
 
     build-packages:
     - gcc
