Enable positional printf argument support required by FileZilla
Signed-off-by: 林博仁(Buo-ren, Lin) <Buo.Ren.Lin@gmail.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -19,6 +19,9 @@ parts:
     source-depth: 1
 
     plugin: autotools
+    configflags:
+    - --enable-printfposparam
+
     build-packages:
     - gcc
     - g++
