Fix depending part's configure error due to wrong libdir location
Signed-off-by: 林博仁(Buo-ren, Lin) <Buo.Ren.Lin@gmail.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -168,6 +168,13 @@ parts:
         "${SNAPCRAFT_STAGE}"/lib/wx/config/gtk3-unicode-3.0 \
         "${SNAPCRAFT_STAGE}"/bin/wx-config
 
+      # Fixup installation prefix
+      sed \
+        --follow-symlinks \
+        --in-place \
+        "s#^prefix=.*\$#prefix=\"${SNAPCRAFT_STAGE}\"#" \
+        "${SNAPCRAFT_STAGE}"/bin/wx-config
+
     prime: 
     - $files-from-stage-packages
     - $executables
