--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -165,7 +165,7 @@ parts:
         --force \
         --relative \
         --symbolic \
-        "${SNAPCRAFT_STAGE}"/lib/wx/config/gtk3-unicode-3.0 \
+        "${SNAPCRAFT_STAGE}"/lib/wx/config/* \
         "${SNAPCRAFT_STAGE}"/bin/wx-config
 
       # Fixup installation prefix
