Fix executables filesets
Symbolic link to lib/wx/config

Signed-off-by: 林博仁(Buo-ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -140,6 +140,7 @@ parts:
       - usr/doc/*/copyright
       executables:
       - bin/*
+      - lib/wx/config
       library-headers:
       - include
       library-libtool:
@@ -302,6 +303,7 @@ parts:
       - usr/doc/*/copyright
       executables:
       - bin
+      - lib/wx/config
       library-headers:
       - include
       library-shared:
